--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "postcss src/styles.css -o dist/styles.css",
-    "watch": "postcss src/styles.css -o dist/styles.css --watch"
+    "build": "postcss ./styles.css -o dist/styles.css",
+    "watch": "postcss ./styles.css -o dist/styles.css --watch"
   },
   "keywords": [],
   "author": "",
